매거진9 수정

--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -140,8 +140,8 @@
 					</div> -->
 					<div id="nav">
 		                <ul>
-		                    <li><a onclick="mgzMobileBrowserChk2();" href="#" class="over">홈</a></li>
-		                    <li><a href="/mgz9/insights">인사이트</a></li>
+		                    <li><a onclick="mgzMobileBrowserChk2();" href="javascript:void(0);" >홈</a></li>
+		                    <li><a href="/mgz9/insights" class="over">인사이트</a></li>
 		                    <li><a href="/mgz9/exhibition">전시</a></li>
 		                    <li><a href="/mgz9/media">아티스트 필름</a></li>	                    
 		                    <li><a href="/mgz9/artist">아티스트</a></li>
@@ -190,9 +190,6 @@
 			<!-- 상세내용 font-size: 15px !important;-->
 			<div style="display: flex;justify-content: center" class="box_pt20 box_con1">
 			<div id="lp_mgz9Dtl_cntnt" style="max-width:900px;padding-left:20px;padding-right:20px;" class=" ck-blurred ck ck-content ck-rounded-corners post-body no-drag" lang="en" dir="ltr" role="textbox" aria-label="Rich Text Editor, main" contenteditable="false">
-				
-<!-- 				<div class="modal-body pd60 h850-o" id="lp_mgz9Dtl_cntnt" style="font:inherit;"></div> -->
-				
 			</div>
 			</div>
 		</div>
