--- a/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
@@ -100,9 +100,9 @@
 				<div class="magazine9_wrap">
 					<div id="nav">
 		                <ul>
-		                    <li><a onclick="mgzMobileBrowserChk3();" href="#" class="over">홈</a></li>
+		                    <li><a onclick="mgzMobileBrowserChk3();" href="javascript:void(0);" >홈</a></li>
 		                    <li><a href="/mgz9/insights">인사이트</a></li>
-		                    <li><a href="/mgz9/exhibition">전시</a></li>
+		                    <li><a href="/mgz9/exhibition" class="over">전시</a></li>
 		                    <li><a href="/mgz9/media">아티스트 필름</a></li>	                    
 		                    <li><a href="/mgz9/artist">아티스트</a></li>
 		                </ul>
