--- a/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_artist.html
@@ -94,10 +94,11 @@
         <div class="magazine9_wrap">
             <div id="nav">
                 <ul>
-                    <li><a href="#">홈</a></li>
-                    <li><a href="#">인사이트</a></li>
-                    <li><a href="#">아티스트 필름</a></li>
-                    <li><a href="#" class="over">아티스트</a></li>
+                    <li><a onclick="mgzMobileBrowserChk4();" href="javascript:void(0);" >홈</a></li>
+                    <li><a href="/mgz9/insights">인사이트</a></li>
+                    <li><a href="/mgz9/exhibition">전시</a></li>
+                    <li><a href="/mgz9/media">아티스트 필름</a></li>	                    
+                    <li><a href="/mgz9/artist" class="over">아티스트</a></li>
                 </ul>
             </div>            
             <div class="magazine9_visual_wrap">
@@ -168,6 +169,16 @@
     <th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
     
 <script th:inline="javascript">		
+		
+	//브라우저 체크
+	function mgzMobileBrowserChk4(){
+		 if(!isMobile){
+			 window.location.href = "/mgz9/magazine9_main";
+		 }else{
+			 window.location.href = "/mgz9/magazine9_mainMobile";
+		 }
+		 
+	 }
 		
 		/* $(document).on("click", "#search", function() {
 			var keyword = $("#searchKeyword").val();			
